greenfoot/scenarios/FlappyBird3/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;F:\CompSci Stuff\Greenfoot Lessons\Greenfoot FlappyBird\FlappyBird Lesson 3
-d
F:\CompSci Stuff\Greenfoot Lessons\Greenfoot FlappyBird\FlappyBird Lesson 3\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
F:\CompSci Stuff\Greenfoot Lessons\Greenfoot FlappyBird\FlappyBird Lesson 3\Flappy.java
<---- end of javadoc command ---->
Loading source file F:\CompSci Stuff\Greenfoot Lessons\Greenfoot FlappyBird\FlappyBird Lesson 3\Flappy.java...
F:\CompSci Stuff\Greenfoot Lessons\Greenfoot FlappyBird\FlappyBird Lesson 3\Flappy.java:23: error: illegal start of expression
        if(Greenfoot.isKeyDown("up") == true)
        ^
F:\CompSci Stuff\Greenfoot Lessons\Greenfoot FlappyBird\FlappyBird Lesson 3\Flappy.java:23: error: not a statement
        if(Greenfoot.isKeyDown("up") == true)
          ^
F:\CompSci Stuff\Greenfoot Lessons\Greenfoot FlappyBird\FlappyBird Lesson 3\Flappy.java:23: error: ';' expected
        if(Greenfoot.isKeyDown("up") == true)
                                             ^
3 errors
